Implement logic for creating, editing and deleting id helpers
